# phylo-movies

./: .babelrc  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.json  .prettierignore  .vale.ini  .zenodo.json  AGENTS.md  AGENT_RULES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPENDENCY_STRUCTURE.md  Dockerfile  LICENSE  Paper_Submission_TODO.md  Procfile  README.md  SECURITY.md  TODO.md  TreeInterpolator.py  algorithm_5.py  app.py  automatic_report_generator.ps1  automatic_report_generator.sh  brancharchitect-0.1.0-py3-none-any.whl  components.json  dev.sh  distances.py  docker-compose.yml  eslint.config.mjs  example.json  index.html  jsconfig.json  main_find_highlights.py  mcp-config.json  (+17 more)
.github/: SECURITY.md  (+2 more)
backend/: README.md  SEDGE_BAR_MANAGER_CONTEXT.md  __init__.py  brancharchitect-0.62.0-py3-none-any.whl  config.py  debug-timeline-sync.md  debug_structure.py  pyproject.toml  requirements.txt  run.py  setup-browser-tools-mcp.sh  test-mcp-console.js  test-sync-simple.sh  test_frontend_logic.py
backend/brancharchitect-0.37.0.dist-info/: METADATA  RECORD
backend/brancharchitect_wheel_backups/: brancharchitect-0.1.1-py3-none-any.whl  brancharchitect-0.11.0-py3-none-any.whl  brancharchitect-0.12.0-py3-none-any.whl  brancharchitect-0.2.0-py3-none-any.whl  brancharchitect-0.20.0-py3-none-any.whl  brancharchitect-0.23.0-py3-none-any.whl  brancharchitect-0.25.0-py3-none-any.whl  brancharchitect-0.26.0-py3-none-any.whl  brancharchitect-0.27.0-py3-none-any.whl  brancharchitect-0.29.0-py3-none-any.whl  (+20 more)
(+2319 files in other folders)
