[tool.poetry]
name = "phyloMovies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
biopython = "^1.79"
ete3 = "^3.1.2"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.1"
Werkzeug = "^2.0.1"
scikit-learn = "^1.6.1"
tabulate = "^0.9.0"
brancharchitect = {path = "brancharchitect_wheel_backups/brancharchitect-0.7.0-py3-none-any.whl"}

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest-timeout = "^2.3.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
